Suppress illegal reflective access warning message during upgrade